--- a/cdn.html
+++ b/cdn.html
@@ -10,13 +10,13 @@
     
     <style>
         :root {
-            --primary: #4f46e5;
-            --primary-hover: #4338ca;
-            --bg-gradient: linear-gradient(135deg, #e0e7ff 0%, #f3e8ff 100%);
-            --surface: #ffffff;
-            --text-main: #1f2937;
-            --text-sub: #6b7280;
-            --border: #e5e7eb;
+            --primary: #152c5a;
+            --primary-hover: #0f2246;
+            --bg-gradient: #152c5a;
+            --surface: #dce0ea;
+            --text-main: #152c5a;
+            --text-sub: #3d4a64;
+            --border: #c5cada;
             --shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.1), 0 8px 10px -6px rgba(0, 0, 0, 0.1);
         }
 
@@ -51,7 +51,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background: rgba(255,255,255,0.8);
+            background: var(--surface);
             backdrop-filter: blur(8px);
         }
 
