--- a/wasm.html
+++ b/wasm.html
@@ -1,160 +1,107 @@
 <!doctype html>
 <html lang="zh">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>OpenCC 浏览器演示</title>
+  <title>OpenCC WASM Low-Level API 演示</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
   <style>
-    :root {
-      --bg: #0f172a;
-      --card: #111827;
-      --accent: #38bdf8;
-      --text: #e5e7eb;
-      --muted: #94a3b8;
-      --border: #1f2937;
+    #configButtons {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+      margin-top: 12px;
     }
-    * { box-sizing: border-box; }
-    body {
-      font-family: "Inter", "Helvetica Neue", Arial, sans-serif;
-      font-size: 17px;
-      background: radial-gradient(circle at 10% 20%, rgba(56,189,248,0.08), transparent 25%),
-                  radial-gradient(circle at 80% 0%, rgba(14,165,233,0.08), transparent 20%),
-                  var(--bg);
-      color: var(--text);
-      max-width: 820px;
-      margin: 40px auto;
-      padding: 0 16px 60px;
-    }
-    h1 { font-size: 30px; margin-bottom: 12px; }
-    h2 { margin-top: 28px; font-size: 22px; }
-    p  { color: var(--muted); line-height: 1.6; }
-    a {
-      color: var(--accent);
-      text-decoration: none;
-      border-bottom: 1px dashed rgba(56,189,248,0.6);
-      padding-bottom: 1px;
-    }
-    a:visited {
-      color: var(--accent);
-    }
-    a:hover {
-      color: #67e8f9;
-      border-bottom-color: #67e8f9;
-    }
-    pre {
-      background: var(--card);
+
+    #configButtons button {
+      background: white;
+      color: var(--text-main);
       border: 1px solid var(--border);
+      padding: 6px 12px;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 0.9rem;
+    }
+
+    #configButtons button:hover {
+      border-color: var(--primary);
+      background: #f0fdf4;
+    }
+
+    .status-log {
+      font-family: monospace;
+      font-size: 0.85rem;
+      background: #2d2d2d;
+      color: #e5e5e5;
       padding: 12px;
       border-radius: 8px;
-      white-space: pre-wrap;
-      word-break: break-word;
-      color: var(--text);
     }
-    label { display: block; margin-top: 12px; color: var(--muted); font-size: 13px; }
+
     input[type="text"] {
+      padding: 8px;
+      border: 1px solid var(--border);
+      border-radius: 6px;
       width: 100%;
-      padding: 10px 12px;
-      font-size: 16px;
-      border-radius: 8px;
-      border: 1px solid var(--border);
-      background: #0b1221;
-      color: var(--text);
-      margin-top: 6px;
     }
-    button {
-      margin-top: 10px;
-      padding: 12px 14px;
-      background: linear-gradient(90deg, #22d3ee, #0ea5e9);
-      border: none;
-      border-radius: 10px;
-      color: #0b1221;
-      font-weight: 700;
-      font-size: 16px;
-      cursor: pointer;
-      transition: transform 0.1s ease, box-shadow 0.2s ease;
-    }
-    button:hover { box-shadow: 0 8px 24px rgba(14,165,233,0.35); }
-    button:active { transform: translateY(1px); }
-    #configButtons { display: flex; flex-wrap: wrap; gap: 10px; margin-top: 12px; }
-    #configButtons button {
-      background: #1d283a;
-      color: var(--text);
-      border: 1px solid var(--border);
-      padding: 8px 10px;
-      border-radius: 8px;
-      min-width: 90px;
-      text-align: center;
-    }
-    .card {
-      background: rgba(17, 24, 39, 0.7);
-      border: 1px solid var(--border);
-      border-radius: 12px;
-      padding: 18px 20px;
-      margin-top: 16px;
-      box-shadow: 0 8px 30px rgba(0,0,0,0.25);
-      backdrop-filter: blur(6px);
-    }
-    @media (max-width: 640px) {
-      body { margin: 20px auto; padding: 0 12px 40px; font-size: 16px; }
-      h1 { font-size: 24px; }
-      h2 { font-size: 20px; }
-      .card { padding: 16px; }
-      button { width: 100%; font-size: 16px; }
-      #configButtons { gap: 8px; }
-      #configButtons button { flex: 1 1 45%; font-size: 15px; }
-      .copy-btn { width: auto; min-width: 56px; padding: 8px 10px; font-size: 15px; }
-    }
-    .copy-btn {
-      background: #1d283a;
-      color: var(--text);
-      border: 1px solid var(--border);
-      padding: 8px 10px;
-      min-width: 64px;
-      width: auto;
-    }
-    .footer {
-      text-align: center;
-      color: var(--muted);
-      margin: 28px 0 10px;
-      font-size: 14px;
-    }
-    .footer a { color: var(--accent); }
   </style>
 </head>
+
 <body>
-  <h1>OpenCC WASM 库 用法演示</h1>
-  <div class="card">
-    <h2>加载配置与词典</h2>
-    <p>点击配置名，自动解析 JSON，按需拉取其中引用的 <code>.ocd2</code> 并写入 WASM 虚拟文件系统的 <code>/data/config/</code>。<a href="https://github.com/BYVoid/OpenCC/tree/master/data/config" target="_blank">配置文件</a>；OpenCC OCD2 字典为<a href="https://github.com/BYVoid/OpenCC/tree/master/data/dictionary" target="_blank">原始 TXT 文件</a>编译产物。</p>
-    <div id="configButtons"></div>
-  </div>
+  <div class="container">
+    <header>
+      <div class="brand">
+        <h1>OpenCC WASM Low-Level API Demo</h1>
+      </div>
+    </header>
 
-  <div class="card">
-    <h2>文本转换</h2>
-    <label for="configPath">配置名称</label>
-    <input id="configPath" type="text" placeholder="尚未选择配置" />
-    <label for="textInput">待转换文本</label>
-    <input id="textInput" type="text" placeholder="汉字" />
-    <button id="runConvert" disabled>执行转换</button>
-    <div style="display:flex; align-items:center; gap:8px; margin-top:10px;">
-      <pre id="convertOutput" style="flex:1; margin:0;"></pre>
-      <button id="copyOutput" class="copy-btn">复制</button>
+    <div class="card-section">
+      <h2>加载配置与词典 (Manual FS Manipulation)</h2>
+      <p style="color:var(--text-sub);">点击配置名，手动写入虚拟文件系统 <code>/data/config/</code>。</p>
+      <div id="configButtons"></div>
     </div>
-  </div>
 
-  <div class="card">
-    <h2>运行 OpenCC 测试用例</h2>
-    <p>读取 <code>/public/testcases.json</code>，自动加载配置与词典并逐条校验。<a href="https://github.com/BYVoid/OpenCC/tree/master/test/testcases" target="_blank">测试用例来源</a></p>
-    <button id="runTests">运行测试</button>
-  </div>
+    <div class="card-section">
+      <h2>文本转换</h2>
+      <div class="options">
+        <div>
+          <label>配置名称</label>
+          <input id="configPath" type="text" placeholder="尚未选择配置" disabled style="background:#f3f4f6;" />
+        </div>
+        <div>
+          <label>待转换文本</label>
+          <input id="textInput" type="text" placeholder="汉字" />
+        </div>
+      </div>
+      <div class="toolbar">
+        <button id="runConvert" class="btn btn-primary" disabled>执行转换</button>
+      </div>
 
-  <div class="card">
-    <h2>日志 / 结果</h2>
-    <pre id="logOutput"></pre>
-  </div>
+      <div style="margin-top: 16px;">
+        <label>转换结果</label>
+        <div style="display:flex; align-items:flex-start; gap:8px;">
+          <div class="output-box" id="convertOutput" style="min-height: 80px;"></div>
+          <button id="copyOutput" class="btn btn-secondary" style="padding: 8px 12px;">复制</button>
+        </div>
+      </div>
+    </div>
 
-  <div class="footer">
-    本頁基於 <a href="https://www.npmjs.com/package/opencc-wasm" target="_blank" rel="noreferrer">opencc-wasm __OPENCC_WASM_VERSION__</a>
+    <div class="card-section">
+      <h2>运行测试用例</h2>
+      <button id="runTests" class="btn btn-secondary">运行测试</button>
+    </div>
+
+    <div class="card-section">
+      <h2>日志</h2>
+      <pre id="logOutput" class="status-log"></pre>
+    </div>
+
+    <div class="footer">
+      本頁基於 <a href="https://www.npmjs.com/package/opencc-wasm" target="_blank" rel="noreferrer">opencc-wasm</a>
+    </div>
   </div>
 
   <script type="module">
@@ -171,10 +118,11 @@
 
     let Module = null;
     let Api = null;
-    const handles = new Map(); // configName -> handle id
-    const loadedConfigs = new Set(); // 已经写入 FS 的配置/词典
-    const loadedDicts = new Set();   // 已写入的 ocd2 文件
-    const readableNames = new Map(); // configName -> readable name
+    const handles = new Map();
+    const loadedConfigs = new Set();
+    const loadedDicts = new Set();
+    const readableNames = new Map();
+
     const initModule = async () => {
       if (!Module) {
         const createOpenCCWasm = await loadWasmFactory();
@@ -212,7 +160,6 @@
       document.getElementById("convertOutput").textContent = Api.convert(handle, text);
     };
 
-    // 解析配置 JSON，收集 ocd2 文件
     const collectOcd2Files = (dictNode, acc) => {
       if (!dictNode || typeof dictNode !== "object") return;
       if (dictNode.type === "ocd2" && dictNode.file) {
@@ -224,7 +171,6 @@
     };
 
     const loadConfigAndDicts = async (cfgName) => {
-      // 已加载则直接复用句柄，避免重复写入与重复占用内存
       if (handles.has(cfgName) && loadedConfigs.has(cfgName)) {
         const cfgPath = `/data/config/${cfgName}`;
         const cfgInput = document.getElementById("configPath");
@@ -245,9 +191,9 @@
       }
       try {
         out.textContent = `Fetching ${cfgName}...`;
-        try { mod.FS.mkdir("/data"); } catch (e) {}
-        try { mod.FS.mkdir("/data/config"); } catch (e) {}
-        try { mod.FS.mkdir("/data/dict"); } catch (e) {}
+        try { mod.FS.mkdir("/data"); } catch (e) { }
+        try { mod.FS.mkdir("/data/config"); } catch (e) { }
+        try { mod.FS.mkdir("/data/dict"); } catch (e) { }
 
         const base = vendorBase.href;
         const cfgUrl = `${base}data/config/${cfgName}`;
@@ -273,7 +219,6 @@
           written.push(`/data/dict/${file}`);
         }
 
-        // 重写配置中的 ocd2 路径，指向 /data/dict
         const patchPaths = (node) => {
           if (!node || typeof node !== "object") return;
           if (node.type === "ocd2" && node.file) {
@@ -290,7 +235,6 @@
         const cfgText = JSON.stringify(cfgJson);
         mod.FS.writeFile(`/data/config/${cfgName}`, cfgText);
 
-        // 构建 / 更新转换句柄
         const cfgPath = `/data/config/${cfgName}`;
         if (handles.has(cfgName)) {
           Api.destroy(handles.get(cfgName));
@@ -321,7 +265,6 @@
       }
     };
 
-    // 构建配置按钮
     const configFiles = [
       "hk2s.json", "hk2t.json", "jp2t.json", "s2hk.json", "s2t.json", "s2twp.json",
       "s2tw.json", "t2hk.json", "t2jp.json", "t2s.json", "t2tw.json",
@@ -347,7 +290,6 @@
           out.textContent = "No testcases found.";
           return;
         }
-        // Collect every config referenced in expected objects
         const cfgSet = new Set();
         cases.forEach(tc => {
           if (tc.expected && typeof tc.expected === "object") {
@@ -401,4 +343,5 @@
     };
   </script>
 </body>
+
 </html>
