--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         <h2 style="margin:0">選擇轉換模式</h2>
         <div style="display:flex;gap:8px;align-items:center;">
           <div id="activePipeline" class="chips"></div>
-          <button id="openConfigModal" class="btn btn-secondary" style="padding: 6px 12px; font-size: 0.9em;">⚙️</button>
+          <button id="openConfigModal" class="btn btn-secondary"
+            style="padding: 6px 12px; font-size: 0.9em;">⚙️</button>
         </div>
       </div>
       <div class="options">
@@ -130,21 +131,29 @@
       <div class="pane">
         <div class="pane-header">
           <span class="pane-title">轉換結果</span>
-          <button id="copyBtn" class="copy-btn">
-            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none"
-              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-              <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
-              <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
-            </svg>
-            複製
-          </button>
+          <div style="display: flex; align-items: center; gap: 12px;">
+            <label class="diff-toggle" for="showDiff">
+              <input type="checkbox" id="showDiff">
+              <span>顯示差異</span>
+            </label>
+            <button id="copyBtn" class="copy-btn">
+              <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
+                <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
+              </svg>
+              複製
+            </button>
+          </div>
         </div>
         <div class="output-box" id="output"></div>
       </div>
     </div>
 
     <div class="footer">
-      本頁面使用 <a href="https://npmjs.com/package/opencc-wasm" target="_blank">opencc-wasm</a> 於本地進行轉換。<br>OpenCC <a href="https://github.com/byvoid/OpenCC" target="_blank">GitHub</a> <a href="https://t.me/+TVq4LmPRlN9hZjE0" target="_blank">Telegram</a>
+      本頁面使用 <a href="https://npmjs.com/package/opencc-wasm" target="_blank">opencc-wasm</a> 於本地進行轉換。<br>OpenCC <a
+        href="https://github.com/byvoid/OpenCC" target="_blank">GitHub</a> <a href="https://t.me/+TVq4LmPRlN9hZjE0"
+        target="_blank">Telegram</a>
     </div>
   </div>
 
@@ -201,6 +210,107 @@
     const convertBtn = document.getElementById("convertBtn");
     const iconConvert = document.getElementById("icon-convert");
     const iconLoading = document.getElementById("icon-loading");
+    const showDiffCheckbox = document.getElementById("showDiff");
+
+    // Store last conversion result for re-rendering when diff toggle changes
+    let lastInput = "";
+    let lastOutput = "";
+
+    /**
+     * Compute diff between two strings using Longest Common Subsequence (LCS)
+     * Returns an array of operations: { type: 'equal'|'delete'|'insert', text: string }
+     */
+    function computeDiff(oldStr, newStr) {
+      const oldChars = [...oldStr];
+      const newChars = [...newStr];
+      const m = oldChars.length;
+      const n = newChars.length;
+
+      // Build LCS table
+      const dp = Array(m + 1).fill(null).map(() => Array(n + 1).fill(0));
+      for (let i = 1; i <= m; i++) {
+        for (let j = 1; j <= n; j++) {
+          if (oldChars[i - 1] === newChars[j - 1]) {
+            dp[i][j] = dp[i - 1][j - 1] + 1;
+          } else {
+            dp[i][j] = Math.max(dp[i - 1][j], dp[i][j - 1]);
+          }
+        }
+      }
+
+      // Backtrack to find diff operations
+      const ops = [];
+      let i = m, j = n;
+      while (i > 0 || j > 0) {
+        if (i > 0 && j > 0 && oldChars[i - 1] === newChars[j - 1]) {
+          ops.push({ type: 'equal', text: oldChars[i - 1] });
+          i--; j--;
+        } else if (j > 0 && (i === 0 || dp[i][j - 1] >= dp[i - 1][j])) {
+          ops.push({ type: 'insert', text: newChars[j - 1] });
+          j--;
+        } else {
+          ops.push({ type: 'delete', text: oldChars[i - 1] });
+          i--;
+        }
+      }
+      ops.reverse();
+
+      // Merge consecutive operations of the same type
+      const merged = [];
+      for (const op of ops) {
+        if (merged.length > 0 && merged[merged.length - 1].type === op.type) {
+          merged[merged.length - 1].text += op.text;
+        } else {
+          merged.push({ ...op });
+        }
+      }
+      return merged;
+    }
+
+    /**
+     * Render diff result as HTML
+     */
+    function renderDiff(input, converted) {
+      const diff = computeDiff(input, converted);
+      let html = '';
+      for (const op of diff) {
+        const escaped = escapeHtml(op.text);
+        if (op.type === 'equal') {
+          html += escaped;
+        } else if (op.type === 'delete') {
+          html += `<span class="diff-del">${escaped}</span>`;
+        } else if (op.type === 'insert') {
+          html += `<span class="diff-ins">${escaped}</span>`;
+        }
+      }
+      return html;
+    }
+
+    /**
+     * Escape HTML special characters
+     */
+    function escapeHtml(str) {
+      return str.replace(/&/g, '&amp;')
+        .replace(/</g, '&lt;')
+        .replace(/>/g, '&gt;')
+        .replace(/"/g, '&quot;')
+        .replace(/'/g, '&#039;');
+    }
+
+    /**
+     * Update output display based on current diff toggle state
+     */
+    function updateOutputDisplay() {
+      if (!lastOutput && !lastInput) {
+        output.innerHTML = '';
+        return;
+      }
+      if (showDiffCheckbox.checked && lastInput !== lastOutput) {
+        output.innerHTML = renderDiff(lastInput, lastOutput);
+      } else {
+        output.textContent = lastOutput;
+      }
+    }
 
     // Helper: Update Status
     function updateStatus(msg, type = 'normal') {
@@ -288,7 +398,9 @@
       }
 
       if (pipeline.length === 0 || !text) {
-        output.textContent = text;
+        lastInput = text;
+        lastOutput = text;
+        updateOutputDisplay();
         return;
       }
 
@@ -309,12 +421,16 @@
           currentText = await converter(currentText);
         }
 
-        output.textContent = currentText;
+        lastInput = text;
+        lastOutput = currentText;
+        updateOutputDisplay();
         updateStatus("完成", 'success');
       } catch (err) {
         console.error(err);
         updateStatus("錯誤", 'error');
-        output.textContent = "轉換發生錯誤: " + err.message;
+        lastInput = '';
+        lastOutput = "轉換發生錯誤: " + err.message;
+        updateOutputDisplay();
       } finally {
         toggleLoading(false);
       }
@@ -521,14 +637,17 @@
     };
 
     document.getElementById("copyBtn").onclick = () => {
-      if (!output.textContent) return;
-      navigator.clipboard.writeText(output.textContent).then(() => {
+      if (!lastOutput) return;
+      navigator.clipboard.writeText(lastOutput).then(() => {
         const btn = document.getElementById("copyBtn");
         const original = btn.innerHTML;
         btn.textContent = "已複製!";
         setTimeout(() => btn.innerHTML = original, 1500);
       });
     };
+
+    // Toggle diff display when checkbox changes
+    showDiffCheckbox.addEventListener('change', updateOutputDisplay);
 
     // Init
     updateStatus("就緒", 'success');
