feat: create landing page with documentation
- Add bilingual (Traditional Chinese/English) introduction
- Emphasize JS frontend library for Chinese conversion
- Add comprehensive usage documentation and API reference
- Include code examples for Browser/CDN, Node.js, React, Vue
- Add config table with all 12 supported configurations
- Add best practices section
- Include Telegram link and Apache 2.0 license notice in footer

--- a/wasm.html
+++ b/wasm.html
@@ -68,7 +68,7 @@
     </header>
 
     <div class="card-section">
-      <h2>加载配置与词典 (Manual FS Manipulation)</h2>
+      <h2>加载配置与词典</h2>
       <p style="color:var(--text-sub);">点击配置名，手动写入虚拟文件系统 <code>/data/config/</code>。</p>
       <div id="configButtons"></div>
     </div>
