feat: add more feature highlights to landing page
- Add 'Authentic Algorithm' card: identical to original OpenCC C++
- Add 'Real WebAssembly' card: comparison with wasm-opencc
- Add 'Continuously Updated' card: latest dictionaries
- Update button text to '在線轉換 Start Converting Now'

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                 </div>
             </div>
             <div class="chips">
-                <a href="https://github.com/nickyc975/opencc-wasm" target="_blank" class="chip"
+                <a href="https://github.com/frankslin/OpenCC/tree/master/wasm-lib" target="_blank" class="chip"
                     style="text-decoration:none;">GitHub</a>
                 <a href="https://www.npmjs.com/package/opencc-wasm" target="_blank" class="chip"
                     style="text-decoration:none;">npm</a>
@@ -295,7 +295,7 @@
                 plus all official configs and prebuilt <code>.ocd2</code> dictionaries.
             </p>
             <div class="hero-buttons">
-                <a href="converter.html" class="btn btn-primary">開始使用 Start Converting</a>
+                <a href="converter.html" class="btn btn-primary">在線轉換 Start Converting Now</a>
                 <a href="compare.html" class="btn btn-secondary" style="background:#fff;">配置對比 Compare All</a>
             </div>
         </div>
@@ -358,10 +358,26 @@
                         Compatible with opencc-js API for easy migration.</p>
                 </div>
                 <div class="feature-card">
-                    <h3>🔧 完全 16 種配置 16 Configurations</h3>
-                    <p>支援完整的 OpenCC 官方配置，包括地域用詞轉換。另有部分开源社區配置。<br>
+                    <h3>🔧 完整 16 種配置 16 Configurations</h3>
+                    <p>支援完整的 OpenCC 官方配置，包括地域用詞轉換。另有部分開源社區配置。<br>
                         Full OpenCC configs including regional phrase conversion. Some configs are from OpenCC open
                         source community.</p>
+                </div>
+                <div class="feature-card">
+                    <h3>✅ 原版算法 Authentic Algorithm</h3>
+                    <p>與原版 OpenCC 工具算法、功能完全一致，辭典格式完全兼容，並非仿寫。<br>
+                        Identical algorithm and functionality to the original OpenCC C++ tool, not a reimplementation
+                        (unlike opencc-js which has some implementation errors).</p>
+                </div>
+                <div class="feature-card">
+                    <h3>🚀 真正的 WASM Real WebAssembly</h3>
+                    <p>與 wasm-opencc 相比，使用了真正的 WebAssembly 技術，兼容現代主流瀏覽器。<br>
+                        Uses genuine WebAssembly technology, compatible with all modern browsers.</p>
+                </div>
+                <div class="feature-card">
+                    <h3>📚 持續更新 Continuously Updated</h3>
+                    <p>兼容最新詞庫並致力於不斷修正，確保轉換品質與時俱進。<br>
+                        Compatible with the latest dictionaries and continuously improving conversion quality.</p>
                 </div>
             </div>
         </div>
@@ -578,7 +594,7 @@ console.<span class="code-function">log</span>(<span class="code-keyword">await<
 
         <div class="footer">
             <p>
-                <a href="https://github.com/nickyc975/opencc-wasm" target="_blank">OpenCC WASM</a> ·
+                <a href="https://github.com/frankslin/OpenCC/tree/master/wasm-lib" target="_blank">OpenCC WASM</a> ·
                 <a href="https://github.com/BYVoid/OpenCC" target="_blank">OpenCC</a> ·
                 <a href="https://www.npmjs.com/package/opencc-wasm" target="_blank">npm</a> ·
                 <a href="https://t.me/+TVq4LmPRlN9hZjE0" target="_blank">Telegram</a>
