--- a/compare.html
+++ b/compare.html
@@ -31,6 +31,13 @@
                 <div class="status-dot"></div>
                 <span id="status-text">初始化中...</span>
             </div>
+            <div class="chips">
+                <a href="index.html" class="chip" style="text-decoration:none;">首頁 Home</a>
+                <a href="https://github.com/frankslin/OpenCC/tree/master/wasm-lib" target="_blank" class="chip"
+                    style="text-decoration:none;">GitHub</a>
+                <a href="https://www.npmjs.com/package/opencc-wasm" target="_blank" class="chip"
+                    style="text-decoration:none;">npm</a>
+            </div>
         </header>
 
         <div class="input-section">
