--- a/converter.html
+++ b/converter.html
@@ -151,9 +151,10 @@
     </div>
 
     <div class="footer">
-      本頁面使用 <a href="https://npmjs.com/package/opencc-wasm" target="_blank">opencc-wasm</a> 於本地進行轉換。<br>OpenCC <a
-        href="https://github.com/byvoid/OpenCC" target="_blank">GitHub</a> <a href="https://t.me/+TVq4LmPRlN9hZjE0"
-        target="_blank">Telegram</a>
+      <a href="index.html" class="chip" style="text-decoration:none;">首頁 Home</a>
+      <a href="https://github.com/frankslin/OpenCC/tree/master/wasm-lib" target="_blank" class="chip"
+        style="text-decoration:none;">GitHub</a> 於本地進行轉換。<br>OpenCC <a href="https://github.com/byvoid/OpenCC"
+        target="_blank">GitHub</a> <a href="https://t.me/+TVq4LmPRlN9hZjE0" target="_blank">Telegram</a>
     </div>
   </div>
 
