--- a/cdn.html
+++ b/cdn.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,147 +10,161 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
-<div class="container">
-    <header>
-        <div class="brand">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 152 152">
-                <path fill="currentColor"
-                    d="M64.7 9.7c-.4.3.3 1.7 1.5 3 1.9 2 2.3 3.6 2.3 8.6v6.2L53 29.7c-8.5 1.3-17.4 2.7-19.7 3.1-3.8.8-4.3.7-6.6-1.9-3.1-3.6-6.2-4-5-.7 1.5 4.2.6 10.7-2.3 16.4-2.6 5.2-2.7 5.8-1.3 8.2.8 1.5 2.1 2.7 2.9 2.7 2 0 4.7-5.8 6.3-13.5l1.3-6.4L39 35.8c18.6-3.1 45.1-5.8 61-6 17.9-.3 18.7.2 12.4 7.2-2 2.2-3.5 4.3-3.2 4.5.3.3 3-.6 6.2-2.1 3.9-1.8 6.9-2.5 9.8-2.2 5.9.4 6.3-2.1 1.1-7.4-5.3-5.5-8.3-6.9-12.4-5.8-1.9.4-9.5 1.1-16.9 1.5-7.4.3-15.4.8-17.7 1.2l-4.3.5.6-3.3c.4-1.9 1.3-4.7 2.1-6.2 1.1-2.3 1.2-3.1.2-4.3-2.5-3.1-11.4-5.5-13.2-3.7z" />
-                <path fill="currentColor"
-                    d="M87 43.5c-1.4.8-3.4 1.4-4.5 1.4s-9.3 1.5-18.3 3.3c-13.9 2.7-16.7 3-19.4 2-5-1.9-5.7.1-1.4 4.4 4.1 4.1 3.7 4.1 16.6-.4 9.1-3.3 26-6.5 27.3-5.3.7.7-7.9 11.8-12.1 15.4-1.9 1.8-2.2 1.8-4.4.3-4.9-3.5-5-1.4-.3 5.5 5.2 7.6 4.9 8.6-3.2 9.4-3.8.4-16.1 2-27.6 3.6-15.1 2.2-21.2 2.7-22.6 1.9-5.2-2.7-6.8.1-2.4 4.2 5.1 4.6 6.1 4.8 13.2 2.1C34 89 55.2 85 68.7 83.6l6.2-.7.7 3.7c1 5.5-.3 25.2-2.1 31.2-.9 2.9-2.3 5.6-3.2 5.9-1.4.6-8.4-.5-15-2.3-4.5-1.2-2.3 1.6 3.3 4.3 3.8 1.8 6.3 3.8 8 6.5 1.3 2.1 3.1 3.8 4 3.8 2.9 0 6.3-4.8 8.6-12.1 2-6.5 2.3-9.4 2.3-24.2V83l3.4-.6c3.6-.7 28.3.1 40.4 1.2 6.4.7 6.7.6 6.7-1.5 0-1.7-1.3-2.8-5.5-4.7-5-2.3-6-2.4-10.7-1.5-2.9.6-12.1 1.3-20.4 1.7l-15.1.7-2.3-4.7-2.2-4.7 6.8-6.4c3.8-3.5 9.3-7.7 12.1-9.2 2.9-1.5 5.3-3.4 5.3-4 0-1.4-7.7-7.3-9.4-7.3-.6.1-2.2.7-3.6 1.5z" />
-            </svg>
-            <div>
-                <h1>OpenCC 轉換工具</h1>
-                <span>CDN 測試版</span>
-            </div>
-        </div>
-        <div id="status" class="status-badge">
-            <div class="status-dot"></div>
-            <span id="status-text">初始化中...</span>
-        </div>
-    </header>
-
-    <div class="editor-area">
-        <div class="pane">
-            <div class="pane-header">
-                <span>簡體中文</span>
-            </div>
-            <textarea id="input" placeholder="請輸入要轉換的文本...">欢迎使用在线版开放中文转换工具</textarea>
-        </div>
-
-        <div class="divider">
-            <button id="run" class="action-btn" disabled title="點擊轉換">
-                <svg id="icon-convert" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M5 12h14M12 5l7 7-7 7"></path>
+    <div class="container">
+        <header>
+            <div class="brand">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 152 152">
+                    <path fill="currentColor"
+                        d="M64.7 9.7c-.4.3.3 1.7 1.5 3 1.9 2 2.3 3.6 2.3 8.6v6.2L53 29.7c-8.5 1.3-17.4 2.7-19.7 3.1-3.8.8-4.3.7-6.6-1.9-3.1-3.6-6.2-4-5-.7 1.5 4.2.6 10.7-2.3 16.4-2.6 5.2-2.7 5.8-1.3 8.2.8 1.5 2.1 2.7 2.9 2.7 2 0 4.7-5.8 6.3-13.5l1.3-6.4L39 35.8c18.6-3.1 45.1-5.8 61-6 17.9-.3 18.7.2 12.4 7.2-2 2.2-3.5 4.3-3.2 4.5.3.3 3-.6 6.2-2.1 3.9-1.8 6.9-2.5 9.8-2.2 5.9.4 6.3-2.1 1.1-7.4-5.3-5.5-8.3-6.9-12.4-5.8-1.9.4-9.5 1.1-16.9 1.5-7.4.3-15.4.8-17.7 1.2l-4.3.5.6-3.3c.4-1.9 1.3-4.7 2.1-6.2 1.1-2.3 1.2-3.1.2-4.3-2.5-3.1-11.4-5.5-13.2-3.7z" />
+                    <path fill="currentColor"
+                        d="M87 43.5c-1.4.8-3.4 1.4-4.5 1.4s-9.3 1.5-18.3 3.3c-13.9 2.7-16.7 3-19.4 2-5-1.9-5.7.1-1.4 4.4 4.1 4.1 3.7 4.1 16.6-.4 9.1-3.3 26-6.5 27.3-5.3.7.7-7.9 11.8-12.1 15.4-1.9 1.8-2.2 1.8-4.4.3-4.9-3.5-5-1.4-.3 5.5 5.2 7.6 4.9 8.6-3.2 9.4-3.8.4-16.1 2-27.6 3.6-15.1 2.2-21.2 2.7-22.6 1.9-5.2-2.7-6.8.1-2.4 4.2 5.1 4.6 6.1 4.8 13.2 2.1C34 89 55.2 85 68.7 83.6l6.2-.7.7 3.7c1 5.5-.3 25.2-2.1 31.2-.9 2.9-2.3 5.6-3.2 5.9-1.4.6-8.4-.5-15-2.3-4.5-1.2-2.3 1.6 3.3 4.3 3.8 1.8 6.3 3.8 8 6.5 1.3 2.1 3.1 3.8 4 3.8 2.9 0 6.3-4.8 8.6-12.1 2-6.5 2.3-9.4 2.3-24.2V83l3.4-.6c3.6-.7 28.3.1 40.4 1.2 6.4.7 6.7.6 6.7-1.5 0-1.7-1.3-2.8-5.5-4.7-5-2.3-6-2.4-10.7-1.5-2.9.6-12.1 1.3-20.4 1.7l-15.1.7-2.3-4.7-2.2-4.7 6.8-6.4c3.8-3.5 9.3-7.7 12.1-9.2 2.9-1.5 5.3-3.4 5.3-4 0-1.4-7.7-7.3-9.4-7.3-.6.1-2.2.7-3.6 1.5z" />
                 </svg>
-                <div id="icon-loading" class="loader" style="display: none;"></div>
-            </button>
-        </div>
+                <div>
+                    <h1>OpenCC 轉換工具</h1>
+                    <span>CDN 測試版</span>
+                </div>
+            </div>
+            <div id="status" class="status-badge">
+                <div class="status-dot"></div>
+                <span id="status-text">初始化中...</span>
+            </div>
+            <div class="chips">
+                <a href="index.html" class="chip" style="text-decoration:none;">首頁 Home</a>
+                <a href="https://github.com/frankslin/OpenCC/tree/master/wasm-lib" target="_blank" class="chip"
+                    style="text-decoration:none;">GitHub</a>
+                <a href="https://www.npmjs.com/package/opencc-wasm" target="_blank" class="chip"
+                    style="text-decoration:none;">npm</a>
+            </div>
+        </header>
 
-        <div class="pane">
-            <div class="pane-header">
-                <span>台灣正體中文 (含地域用詞轉換)</span>
-                <button class="copy-btn" id="copy-btn">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path></svg>
-                    複製結果
+        <div class="editor-area">
+            <div class="pane">
+                <div class="pane-header">
+                    <span>簡體中文</span>
+                </div>
+                <textarea id="input" placeholder="請輸入要轉換的文本...">欢迎使用在线版开放中文转换工具</textarea>
+            </div>
+
+            <div class="divider">
+                <button id="run" class="action-btn" disabled title="點擊轉換">
+                    <svg id="icon-convert" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                        stroke-width="2" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M5 12h14M12 5l7 7-7 7"></path>
+                    </svg>
+                    <div id="icon-loading" class="loader" style="display: none;"></div>
                 </button>
             </div>
-            <textarea id="output" readonly placeholder="轉換結果將顯示在這裡..."></textarea>
+
+            <div class="pane">
+                <div class="pane-header">
+                    <span>台灣正體中文 (含地域用詞轉換)</span>
+                    <button class="copy-btn" id="copy-btn">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
+                            <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
+                        </svg>
+                        複製結果
+                    </button>
+                </div>
+                <textarea id="output" readonly placeholder="轉換結果將顯示在這裡..."></textarea>
+            </div>
+        </div>
+
+        <div class="footer">
+            本頁面通過 jsdelivr CDN 加載 opencc-wasm __OPENCC_WASM_VERSION__，使用 opencc-js 相容 API，自動從 CDN 抓取配置與字典。
         </div>
     </div>
 
-    <div class="footer">
-      本頁面通過 jsdelivr CDN 加載 opencc-wasm __OPENCC_WASM_VERSION__，使用 opencc-js 相容 API，自動從 CDN 抓取配置與字典。
-    </div>
-</div>
+    <script type="module">
+        import OpenCC from "https://cdn.jsdelivr.net/npm/opencc-wasm@__OPENCC_WASM_VERSION__/dist/esm/index.js";
 
-<script type="module">
-    import OpenCC from "https://cdn.jsdelivr.net/npm/opencc-wasm@__OPENCC_WASM_VERSION__/dist/esm/index.js";
+        // UI Elements
+        const statusBadge = document.getElementById('status');
+        const statusText = document.getElementById('status-text');
+        const input = document.getElementById('input');
+        const run = document.getElementById('run');
+        const output = document.getElementById('output');
+        const copyBtn = document.getElementById('copy-btn');
+        const iconConvert = document.getElementById('icon-convert');
+        const iconLoading = document.getElementById('icon-loading');
 
-    // UI Elements
-    const statusBadge = document.getElementById('status');
-    const statusText = document.getElementById('status-text');
-    const input = document.getElementById('input');
-    const run = document.getElementById('run');
-    const output = document.getElementById('output');
-    const copyBtn = document.getElementById('copy-btn');
-    const iconConvert = document.getElementById('icon-convert');
-    const iconLoading = document.getElementById('icon-loading');
+        let converter = null;
 
-    let converter = null;
-
-    function updateStatus(msg, type = 'normal') {
-        statusText.textContent = msg;
-        statusBadge.className = 'status-badge ' + (type === 'success' ? 'ready' : type === 'error' ? 'error' : '');
-    }
-
-    function toggleLoading(isLoading) {
-        if (isLoading) {
-            iconConvert.style.display = 'none';
-            iconLoading.style.display = 'block';
-            run.disabled = true;
-        } else {
-            iconConvert.style.display = 'block';
-            iconLoading.style.display = 'none';
-            run.disabled = false;
+        function updateStatus(msg, type = 'normal') {
+            statusText.textContent = msg;
+            statusBadge.className = 'status-badge ' + (type === 'success' ? 'ready' : type === 'error' ? 'error' : '');
         }
-    }
 
-    copyBtn.onclick = () => {
-        if (!output.value) return;
-        navigator.clipboard.writeText(output.value).then(() => {
-            const originalText = copyBtn.innerHTML;
-            copyBtn.innerHTML = '已複製!';
-            setTimeout(() => copyBtn.innerHTML = originalText, 1500);
+        function toggleLoading(isLoading) {
+            if (isLoading) {
+                iconConvert.style.display = 'none';
+                iconLoading.style.display = 'block';
+                run.disabled = true;
+            } else {
+                iconConvert.style.display = 'block';
+                iconLoading.style.display = 'none';
+                run.disabled = false;
+            }
+        }
+
+        copyBtn.onclick = () => {
+            if (!output.value) return;
+            navigator.clipboard.writeText(output.value).then(() => {
+                const originalText = copyBtn.innerHTML;
+                copyBtn.innerHTML = '已複製!';
+                setTimeout(() => copyBtn.innerHTML = originalText, 1500);
+            });
+        };
+
+        async function doConvert() {
+            if (!converter) return;
+            const text = input.value;
+            if (!text.trim()) {
+                output.value = '';
+                return;
+            }
+            toggleLoading(true);
+            updateStatus('轉換中...');
+            try {
+                const result = await converter(text);
+                output.value = result;
+                updateStatus('轉換完成', 'success');
+            } catch (err) {
+                console.error(err);
+                output.value = '轉換出錯';
+                updateStatus('轉換失敗: ' + err.message, 'error');
+            } finally {
+                toggleLoading(false);
+            }
+        }
+
+        async function init() {
+            try {
+                updateStatus('正在載入 opencc-wasm...');
+                converter = OpenCC.Converter({ config: "s2twp.json" });
+                updateStatus('預熱詞典...');
+                await converter("預熱");
+                updateStatus('準備就緒', 'success');
+                run.disabled = false;
+            } catch (err) {
+                console.error(err);
+                updateStatus('初始化失敗: ' + err.message, 'error');
+                run.disabled = true;
+            }
+        }
+
+        run.onclick = () => doConvert();
+
+        input.addEventListener('input', () => {
+            if (converter) updateStatus('準備就緒', 'success');
         });
-    };
 
-    async function doConvert() {
-        if (!converter) return;
-        const text = input.value;
-        if (!text.trim()) {
-            output.value = '';
-            return;
-        }
-        toggleLoading(true);
-        updateStatus('轉換中...');
-        try {
-            const result = await converter(text);
-            output.value = result;
-            updateStatus('轉換完成', 'success');
-        } catch (err) {
-            console.error(err);
-            output.value = '轉換出錯';
-            updateStatus('轉換失敗: ' + err.message, 'error');
-        } finally {
-            toggleLoading(false);
-        }
-    }
-
-    async function init() {
-        try {
-            updateStatus('正在載入 opencc-wasm...');
-            converter = OpenCC.Converter({ config: "s2twp.json" });
-            updateStatus('預熱詞典...');
-            await converter("預熱");
-            updateStatus('準備就緒', 'success');
-            run.disabled = false;
-        } catch (err) {
-            console.error(err);
-            updateStatus('初始化失敗: ' + err.message, 'error');
-            run.disabled = true;
-        }
-    }
-
-    run.onclick = () => doConvert();
-
-    input.addEventListener('input', () => {
-        if (converter) updateStatus('準備就緒', 'success');
-    });
-
-    init();
-</script>
+        init();
+    </script>
 </body>
+
 </html>
